# howard-toolbox

./: .gitignore  AGENTS.md  README.md  RENAME_INSTRUCTIONS.txt  pyproject.toml  requirements.txt
roll-rate-model/: .gitignore  CMakeLists.txt  README.md
roll-rate-model/config/: default.json  dump_BASE_v2.json  dump_DIALED_v3.json
roll-rate-model/include/: cf.h  data_mgr.h  dump.h  loan_schema.h  prob_schema.h  types.h  utils.h  var_registry.h
roll-rate-model/include/io/: json_reader.h  macro_reader.h  pmt_matrix_reader.h  tsv_reader.h
roll-rate-model/include/model/: model_coef.h  roll.h  transition.h
roll-rate-model/include/runners/: cf_parallel.h
roll-rate-model/input/: pmt_matrix.txt
roll-rate-model/input/dial/: RKTL_ctd1_ctp.txt  upst_ctd1.txt
roll-rate-model/input/macro/: CPIAUCNS.csv  FICO_BKT_COUPON.csv  FICO_BKT_COUPON_BY_PLATFORM.csv  cpi_table.csv  update_macro.py
roll-rate-model/output/par_2026_1/: par_2026_1_deal_report_20260414_123343.html  par_2026_1_deal_report_20260414_180628.html
roll-rate-model/output/upst_2026_2/: upst_2026_2_deal_report_20260416_112208.html  upst_2026_2_deal_report_20260416_114207.html  upst_2026_2_deal_report_20260416_145110.html  upst_2026_2_deal_report_20260416_172226.html
roll-rate-model/output/upst_2026_2_ORIG/: upst_2026_2_ORIG_deal_report_20260416_111723.html
roll-rate-model/python/: curve_report.py  data_prep_for_sim.py  generate_deal_report.py  run.py
roll-rate-model/python/deal_report/: __init__.py  aggregation.py  assets.py  builder.py  cashflow_compare.py  formatters.py  grade_sort.py  input_stats.py  kpis.py  loader.py  theme.py  vega_specs.py
roll-rate-model/python/simengine/: __init__.py  _bindings.cpp  (+6 more)
roll-rate-model/src/: cf.cpp  data_mgr.cpp  debug_calc.cpp  dump.cpp  loan_schema.cpp  main.cpp  prob_schema.cpp  types.cpp  utils.cpp  var_registry.cpp
roll-rate-model/tools/: csvs_to_xlsx.py  dump_gam_to_coef.R  export_fico_coupon_by_platform.R  export_macro_lookups.R  find_crash_loan.py  gen_product_guide.py  generate_macro_table.py
(+173 files in other folders)
